Update the clipping window bounds if tray bubble anchor updated.

In tablet mode, the tray bubbles are clipped by a clipping window.
If the anchor (tray or bubble) changes, should update the bounds
of the clipping window at the same time to make sure they can be
clipped correctly.

Test: Tested locally
Bug: 759233
Change-Id: I8e3bfec21cda70e16e43273a4b0a8b9b7aa0f082
Reviewed-on: https://chromium-review.googlesource.com/642728
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: min c <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498545}
Former-commit-id: cd71d8389dcf9d2e64a7f01cbf5af97c01b38934