ash/system/tray/tray_background_view.cc
@@ -362,7 +362,10 @@ void TrayBackgroundView::UpdateAfterShelfAlignmentChange() {
       GetLocalBounds().InsetsFrom(paint_bounds)));
 }
 
-void TrayBackgroundView::AnchorUpdated() {}
+void TrayBackgroundView::AnchorUpdated() {
+  if (GetBubbleView())
+    UpdateClippingWindowBounds();
+}
 
 void TrayBackgroundView::BubbleResized(
     const views::TrayBubbleView* bubble_view) {}
@@ -438,6 +441,11 @@ gfx::Insets TrayBackgroundView::GetBubbleAnchorInsets() const {
     return gfx::Insets(anchor_insets.top(), -tray_bg_insets.left(),
                        anchor_insets.bottom(), -tray_bg_insets.right());
   }
+}
+
+void TrayBackgroundView::UpdateClippingWindowBounds() {
+  if (clipping_window_.get())
+    clipping_window_->SetBounds(shelf_->GetUserWorkAreaBounds());
 }
 
 aura::Window* TrayBackgroundView::GetBubbleWindowContainer() {
