ash/system/web_notification/web_notification_tray.cc
@@ -406,6 +406,7 @@ void WebNotificationTray::UpdateAfterShelfAlignmentChange() {
 
 void WebNotificationTray::AnchorUpdated() {
   if (message_center_bubble()) {
+    UpdateClippingWindowBounds();
     message_center_bubble()->bubble_view()->UpdateBubble();
     UpdateBubbleViewArrow(message_center_bubble()->bubble_view());
   }
